	to be incorrect when generated for multiple programs.
2025-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'Generate Affidavit' button from the 'List Programs'
	dialog in davit(1).
2025-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'List Reports' dialog in davit(1).
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Disabled installation of components in 'utils/vnc/'.
	* Disabled installation of components in 'scripts/'.
	* Moved sample configuration files to 'conf/'.
	* Got the affiliate web interface working.
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'List Affiliates' dialog in davit(1) that broke
	filtering by call letters when the 'Show Affiliates Only' checkbox
	was ticked.
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Affiliate Is Active' checkbox to the 'Edit Affiliate'
	dialog in davit(1).
	* Re-enabled the 'Add' and 'Delete' buttons in the 'List Affiliates'
	dialog in davit(1).
	* Added checks to prevention the creation of duplicate affiliate
	records in davit(1).
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed superfluous debugging statements from
	'davit/contactlistmodel.cpp'.
	* Fixed a regression in 'lib/statecombobox.cpp' that caused the 'ALL'
	entry to be included regardless of the value of the 'bool incl_all'
	parameter in the 'StateComboBox' constructor.
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added code to delete associated data when deleting an affiliate
	entry in davit(1).
2025-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in the 'Edit Affiliate' dialog that caused
	the 'Hide Affiliate History' button to fail to be updated if the
	'Affiliate History' dialog was closed by clicking the 'X' button'.
2025-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Edit System' and 'Compose Mail' dialogs in davit(1).
2025-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Refactored dvtstamp(8).